--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .header {
   height: 100vh;
-  background-image: url("../img/bg.jpg");
+  background-image: url("https://raw.githubusercontent.com/ArtiomB5/6Modal-15VanillaJSProjects/main/img/bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   display: grid;
